test/libsolidity/syntaxTests/license/license_double3.sol
// SPDX-License-Identifier: GPL-3.0
// SPDX-License-Identifier: GPL-3.0
contract C {}
// ----
// ParserError 3716: Multiple SPDX license identifiers found in source file. Use "AND" or "OR" to combine multiple licenses. Please see https://spdx.org for more information.
